3.000003    Unknown
    * Fix stray non-ASCII characters in the versions in the Changes log.
        - https://rt.cpan.org/Ticket/Display.html?id=125161
        - Thanks to SREZIC.
    * Throw an error on failed close() before rename() to overwrite the file.
        - https://rt.cpan.org/Ticket/Display.html?id=114140
        - Thanks to SREZIC and fschlich.

3.000002    2019-03-14
    * Fix error with missing here doc end marker
        - Thanks to Igor Korchynskyi .

3.000001    2019-01-16
    * Fix typos
        - https://rt.cpan.org/Public/Bug/Display.html?id=128267
        - Thanks to ROAM .

3.000000    2018-09-13
    * Fix typos
        - https://github.com/shlomif/perl-Config-IniFiles/pull/5
        - Thanks to @ppentchev
    * Resubmit with new version to please CPAN/metacpan/etc.

2.99        2018-07-12
    * Fix the link to the repository
        - https://github.com/shlomif/perl-Config-IniFiles/issues/4
        - Thanks to @bessarabov for the report.

2.98        2018-04-21
    * Remove old author-only test scripts.
        - https://rt.cpan.org/Ticket/Display.html?id=125161
        - Thanks to SREZIC for the report.

2.97        2018-04-21
    * Apply pull-request to implement -php_compat
        - https://github.com/shlomif/perl-Config-IniFiles/pull/3
        - https://rt.cpan.org/Ticket/Display.html?id=102339
        - Thanks to @Sadrak !

2.96        2018-04-07
    * Fix https://rt.cpan.org/Ticket/Display.html?id=125025 .
        - Apply patch from Debian.
        - Cache section hashes in the tie interface (which one should avoid
        using.)

2.95        2018-03-16
    * Make use of perltidy and test for it.
    * Remove firstload / reload logic
        - https://rt.cpan.org/Ticket/Display.html?id=104763
        - thanks to José Joaquín Atria

2.94        2016-11-29
    * Move to GitHub.
        - for better visibility, collaboration, and CI options.
    * Apply a patch/pull-request from Peter from Debian with some corrections
    for typos: