@@ -5,6 +5,8 @@
     * Throw an error on failed close() before rename() to overwrite the file.
         - https://rt.cpan.org/Ticket/Display.html?id=114140
         - Thanks to SREZIC and fschlich.
+    * Allow overriding the output chmod() file permissions.
+        - https://rt.cpan.org/Ticket/Display.html?id=84431
 
 3.000002    2019-03-14
     * Fix error with missing here doc end marker
